--- a/DatabaseConnection/DatabaseConnection.csproj
+++ b/DatabaseConnection/DatabaseConnection.csproj
@@ -54,7 +54,9 @@
     </Compile>
     <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Prompt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlCommandEntry.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
